--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,16 +3,44 @@
     <h3>Insert Data</h3>
     <form action="/insert" method="post">
         <div class="input">
-            <label for="title">Title</label>
-            <input type="text" id="title" name="title">
+            <label for="AssetID">AssetID</label>
+            <input type="text" id="AssetID" name="AssetID">
         </div>
         <div class="input">
-            <label for="content">Content</label>
-            <input type="text" id="content" name="content">
+            <label for="Serial No">SerialNo</label>
+            <input type="text" id="SerialNo" name="SerialNo">
         </div>
         <div class="input">
-            <label for="author">Author</label>
-            <input type="text" id="author" name="author">
+            <label for="Media">Media</label>
+            <input type="text" id="Media" name="Media">
+        </div>
+        <div class="input">
+            <label for="Copy No">CopyNo</label>
+            <input type="text" id="CopyNo" name="CopyNo">
+        </div>
+        <div class="input">
+            <label for="Location">Location</label>
+            <input type="text" id="Location" name="Location">
+        </div>
+        <div class="input">
+            <label for="Description">Description</label>
+            <input type="text" id="Description" name="Description">
+        </div>
+        <div class="input">
+            <label for="Registered By">RegisteredBy</label>
+            <input type="text" id="RegisteredBy" name="RegisteredBy">
+        </div>
+        <div class="input">
+            <label for="Registered Date">RegisteredDate</label>
+            <input type="text" id="RegisteredDate" name="RegisteredDate">
+        </div>
+        <div class="input">
+            <label for="Protective Marking">ProtectiveMarking</label>
+            <input type="text" id="ProtectiveMarking" name="ProtectiveMarking">
+        </div>
+        <div class="input">
+            <label for="Status">Status</label>
+            <input type="text" id="Status" name="Status">
         </div>
         <button type="submit">INSERT</button>
     </form>
@@ -23,9 +51,16 @@
     <div>
         {{# each items }}
             <article class="item">
-                <div>Title: {{ this.title }}</div>
-                <div>Content: {{ this.content }}</div>
-                <div>Author: {{ this.author }}</div>
+                <div>AssetID: {{ this.AssetID }}</div>
+                <div>SerialNo: {{ this.SerialNo }}</div>
+                <div>Media: {{ this.Media }}</div>
+                <div>CopyNo: {{ this.CopyNo }}</div>
+                <div>Location: {{ this.Location }}</div>
+                <div>Description: {{ this.Description }}</div>
+                <div>RegisteredBy: {{ this.RegisteredBy }}</div>
+                <div>RegisteredDate: {{ this.RegisteredDate }}</div>
+                <div>ProtectiveMarking: {{ this.ProtectiveMarking }}</div>
+                <div>Status: {{ this.Status }}</div>
                 <div>ID: {{ this._id }}</div>
             </article>
         {{/each}}
