Fixed bug in /update
**Fixed bug in /update to Assets Collection**

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,18 +72,46 @@
         <div class="input">
             <label for="id">ID</label>
             <input type="text" id="id" name="id">
-        </div>
-        <div class="input">
-            <label for="title">Title</label>
-            <input type="text" id="title" name="title">
-        </div>
-        <div class="input">
-            <label for="content">Content</label>
-            <input type="text" id="content" name="content">
-        </div>
-        <div class="input">
-            <label for="author">Author</label>
-            <input type="text" id="author" name="author">
+            <div class="input">
+                <label for="AssetID">AssetID</label>
+                <input type="text" id="AssetID" name="AssetID">
+            </div>
+            <div class="input">
+                <label for="Serial No">SerialNo</label>
+                <input type="text" id="SerialNo" name="SerialNo">
+            </div>
+            <div class="input">
+                <label for="Media">Media</label>
+                <input type="text" id="Media" name="Media">
+            </div>
+            <div class="input">
+                <label for="Copy No">CopyNo</label>
+                <input type="text" id="CopyNo" name="CopyNo">
+            </div>
+            <div class="input">
+                <label for="Location">Location</label>
+                <input type="text" id="Location" name="Location">
+            </div>
+            <div class="input">
+                <label for="Description">Description</label>
+                <input type="text" id="Description" name="Description">
+            </div>
+            <div class="input">
+                <label for="Registered By">RegisteredBy</label>
+                <input type="text" id="RegisteredBy" name="RegisteredBy">
+            </div>
+            <div class="input">
+                <label for="Registered Date">RegisteredDate</label>
+                <input type="text" id="RegisteredDate" name="RegisteredDate">
+            </div>
+            <div class="input">
+                <label for="Protective Marking">ProtectiveMarking</label>
+                <input type="text" id="ProtectiveMarking" name="ProtectiveMarking">
+            </div>
+            <div class="input">
+                <label for="Status">Status</label>
+                <input type="text" id="Status" name="Status">
+            </div>
         </div>
         <button type="submit">UPDATE</button>
     </form>
