--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
 <h1>MONGODB - EXERCISE</h1>
+
+<!-- SECTION FOR INSERTING EXISTING ASSETS -->
+
 <section class="insert">
     <h3>Insert Data</h3>
     <form action="/insert" method="post">
@@ -45,6 +48,9 @@
         <button type="submit">INSERT</button>
     </form>
 </section>
+
+<!-- SECTION FOR RETRIEVING EXISTING ASSETS FROM 'ASSETS' COLLECTION -->
+
 <section class="get">
     <h3>Get Data</h3>
     <a href="/get-data">LOAD DATA</a>
@@ -66,6 +72,9 @@
         {{/each}}
     </div>
 </section>
+
+<!-- SECTION FOR UPDATING EXISTING ASSETS -->
+
 <section class="update">
     <h3>Update Data</h3>
     <form action="/update" method="post">
@@ -117,6 +126,9 @@
     </form>
 </section>
 </section>
+
+<!-- SECTION FOR DELETING EXISTING ASSETS -->
+
 <section class="delete">
     <h3>Delete Data</h3>
     <form action="/delete" method="post">
