--- a/views/regAsset.hbs
+++ b/views/regAsset.hbs
@@ -1,12 +1,11 @@
-<h1>Assets Page</h1>
-
+<h1>regAsset</h1>
 
 <a href="/View-Asset">View Assets</a>
 <a href="/Reg-Asset">Register Assets</a>
 <a href="/Edit-Asset">Edit Assets</a>
 <!-- SECTION FOR INSERTING EXISTING ASSETS -->
 
-<!--<section class="insert">
+<section class="insert">
     <h3>Insert Data</h3>
     <form action="/insert" method="post">
         <div class="input">
@@ -51,11 +50,11 @@
         </div>
         <button type="submit">INSERT</button>
     </form>
-</section>-->
+</section>
 
 <!-- SECTION FOR RETRIEVING EXISTING ASSETS FROM 'ASSETS' COLLECTION -->
 
-<section class="get">
+<!--<section class="get">
     <h3>Get Data</h3>
     <a href="/get-data">LOAD DATA</a>
     <div>
@@ -75,7 +74,7 @@
             </article>
         {{/each}}
     </div>
-</section>
+</section>-->
 
 <!-- SECTION FOR UPDATING EXISTING ASSETS -->
 
