Additional Links added
Links now assigned in the layout file.

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
-
+    <a href="/View-Asset">View Assets</a>
+    <a href="/Reg-Asset">Register Assets</a>
+    <a href="/Edit-Asset">Edit Assets</a>
 </head>
 <body>
     {{{ body }}}
