--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,3 @@
 <h3>Error Found!</h3>
 <br></br>
-<h5>Link incorrect. Please navigate back to the Dashboard.</h5>
+<h5>404 - Link incorrect. Please navigate back to the Dashboard.</h5>
