Database Aggregation added
Database Aggregation added to the dashboard.
UI validation added for creating new user, registering assets and updating assets.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,40 @@
 <h1>Dashbaord</h1>
 
+
+<div class="btn btn-primary btn-lg">
+    <div class="btn-group float-right">
+        <button type="button" class="btn btn-transparent p-0" aria-haspopup="true" aria-expanded="false">
+            <i class="icon-settings"></i>
+        </button>
+    </div>
+    <div class="text-value">{{docs}}</div>
+    <div>Active CDs</div>
+    <div class="chart-wrapper" style="width:32%; height:70px;">
+        <canvas id="card-chart1" class="chart" height="70"></canvas>
+    </div>
+</div>
+<div class="btn btn-primary btn-lg">
+    <div class="btn-group float-right">
+        <button type="button" class="btn btn-transparent p-0" aria-haspopup="true" aria-expanded="false">
+            <i class="icon-settings"></i>
+        </button>
+    </div>
+    <div class="text-value">{{papers}}</div>
+    <div>Active CDs</div>
+    <div class="chart-wrapper" style="width:32%; height:70px;">
+        <canvas id="card-chart1" class="chart" height="70"></canvas>
+    </div>
+</div>
+<div class="btn btn-primary btn-lg">
+    <div class="btn-group float-right">
+        <button type="button" class="btn btn-transparent p-0" aria-haspopup="true" aria-expanded="false">
+            <i class="icon-settings"></i>
+        </button>
+    </div>
+    <div class="text-value">{{doc}}</div>
+    <div>Active CDs</div>
+    <div class="chart-wrapper" style="width:32%; height:70px;">
+        <canvas id="card-chart1" class="chart" height="70"></canvas>
+    </div>
+</div>
+
