--- a/views/regUser.hbs
+++ b/views/regUser.hbs
@@ -20,6 +20,14 @@
         <input type="text" class="form-control" placeholder="Username" name="username">
     </div>
     <div class="form-group">
+        <label for="roles">Roles</label>
+        <select class="form-control" id="roles" placeholder="Role" name="role">
+            <option>Standard User</option>
+            <option>PIAO</option>
+            <option>Security Manager</option>
+        </select>
+    </div>
+    <div class="form-group">
         <label>Role</label>
         <input type="text" class="form-control" placeholder="Role" name="role">
     </div>
