--- a/views/viewAssets.hbs
+++ b/views/viewAssets.hbs
@@ -19,7 +19,7 @@
 
     <tbody>
     {{# each items }}
-        <tr>
+        <tr class="viewAssets">
             <td>{{ this.AssetID }}</td>
             <td>{{ this.SerialNo }}</td>
             <td>{{ this.Media }}</td>
@@ -35,3 +35,4 @@
     {{/each}}
     </tbody>
     </table>
+</div>
