--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,6 +5,7 @@
     <title>SAM Application</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.min.css">
 
 </head>
 <body>
