Mongoose Bug Fixes
Fixed Active CDs query.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
             <i class="icon-settings"></i>
         </button>
     </div>
-    <div class="text-value">{{docs}}</div>
+    <div class="text-value">{{cds}}</div>
     <div>Active CDs</div>
     <div class="chart-wrapper" style="width:32%; height:70px;">
         <canvas id="card-chart1" class="chart" height="70"></canvas>
